# kasugai_qgis

./: .gitignore  Cargo.toml  README.md  index.md
download/: qgis_settings.json  qgis_settings_USERNAME.json.example  qgis_settings_override.json.example  qgislocalsync.config.example
download/ProjectFiles/: ProjectFile.qgs  ProjectFile.qgs.qto3settings
download/ProjectFiles/data/サンプル/DM/: DM_C.gpkg
download/ini/: Administrator.ini  Administrator.xml  Editor.ini  Editor.xml  Viewer.ini  Viewer.xml  qgis_global_settings.ini  startup.py
download/profiles/QGIS4/profiles/: profiles.ini
download/profiles/QGIS4/profiles/geo_custom/: qgis.db  symbology-style.db
download/profiles/QGIS4/profiles/geo_custom/QGIS/: QGIS3.ini  QGIS4.ini
download/profiles/QGIS4/profiles/geo_custom/python/: startup.py
download/profiles/QGIS4/profiles/geo_custom/python/plugins/QGIS-legendView-main/: metadata.txt
download/profiles/QGIS4/profiles/geo_custom/python/plugins/Qgis2threejs/: conf.py
download/profiles/QGIS4/profiles/geo_custom/python/plugins/QuickDEM4JP/: metadata.txt
download/profiles/QGIS4/profiles/geo_custom/python/plugins/StreetView/: metadata.txt  streetview.py
download/profiles/QGIS4/profiles/geo_custom/python/plugins/geo_import/: metadata.txt
download/profiles/QGIS4/profiles/geo_custom/python/plugins/geo_report/: metadata.txt  plugin.py
download/profiles/QGIS4/profiles/geo_custom/python/plugins/geo_search/: metadata.txt
download/profiles/QGIS4/profiles/geo_custom/python/plugins/geo_webview/: LICENSE  __init__.py  http_server.py  (+13 more)
src/: lib.rs  main.rs
(+96 files in other folders)
