[package]
name = "qgis_launcher"
version = "1.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
clap = { version = "4.5", features = ["derive"] }
winreg = "0.55.0"
mslnk = "0.1.8"
fltk = { version = "1.5", features = ["fltk-bundled"], optional = true }
quick-xml = "0.29"
zip = "0.6"

[features]
default = ["gui"]
gui = ["fltk"]
